# CADEX-Test

./: CMakeLists.txt  README.md
include/: Circle.h  Curve3D.h  Ellipse.h  Helix.h  Vec3.h
src/: CMakeLists.txt  Circle.cpp  Ellipse.cpp  Helix.cpp  main.cpp
